<resources>
    <string name="app_name">ShoppingApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">Get Started</string>
    <string name="simpleappintroimage">simpleAppIntroImage</string>
    <string name="your_journey_begins_here">Sign in / Sign Up</string>
    <string name="welcome_to_seamless_shopping_unleash_the_thrill_of_discovery_find_your_favorites">Welcome to seamless shopping! Unleash the thrill of discovery, find your favorites  Dive into a world of endless choices, unbeatable deals, and effortless browsing!</string>
    <string name="wave">wave</string>
    <string name="register_now">Register Now</string>
    <string name="backbutton">backButton</string>
    <string name="welcome">Welcome</string>
    <string name="user_email">User Email</string>
    <string name="user_password">User Password</string>
    <string name="don_t_have_account">Don\'t have Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="already_have_an_account">Already have an account!</string>
    <string name="log_in">Log In</string>
    <string name="shoppinghomepage">shoppinghomepage</string>
    <string name="favourite">favourite</string>
    <string name="shopping_bag">shopping bag</string>
    <string name="user_profile">user profile</string>
    <string name="voiceicon">voiceicon</string>
    <string name="search_now">Search Now</string>
    <string name="best_products">Best Products</string>
    <string name="best_deals">Best deals</string>
    <string name="product_image">product image</string>
    <string name="favourtie_product_image">favourtie product image</string>
    <string name="cancel_img">cancel</string>
    <string name="my_cart">My Cart</string>
    <string name="your_cart_bag_is_empty">Your Cart Bag is Empty!</string>
    <string name="addresses">Addresses</string>
    <string name="billing">Billing</string>
    <string name="payment_options">Currently we only support cash on delivery,more options are coming soon!</string>
    <string name="payment_methods">Payment methods</string>
    <string name="shipping">shipping</string>
    <string name="shipping1">Shipping</string>
    <string name="total">Total</string>
    <string name="place_order">Place Order</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="update_image">update image</string>
    <string name="g_home">Home</string>
    <string name="g_sports">Sports</string>
    <string name="g_males">Males</string>
    <string name="g_footwear">Footwear</string>
    <string name="g_acces">Accessoires</string>
    <string name="g_coming_soon">Feature Comming Soon!</string>
</resources>