<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.userAuthFragments.LoginFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/guidelinehorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/g_yellow" />


        <ImageView
            android:id="@+id/back_bttn"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/backbutton"
            android:scaleType="centerCrop"
            android:src="@drawable/back_arrow_ic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/andika"
            android:text="@string/welcome"
            android:textColor="@color/g_white"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back_bttn" />


        <ImageView
            android:layout_width="130dp"
            android:layout_height="100dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/shop_girl_img"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelinehorizontal">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edittextLayout1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:hint="@string/user_email"
            app:cursorColor="@color/g_black"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/g_grey200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconContentDescription="useremailaddress"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_email_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittextbackground"
                android:fontFamily="@font/andika"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edittestlayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/user_password"
            app:cursorColor="@color/g_black"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/g_grey200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edittextLayout1"
            app:startIconContentDescription="user password"
            app:startIconDrawable="@drawable/ic_key">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_paswrd_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittextbackground"
                android:fontFamily="@font/andika"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/login_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:backgroundTint="@color/g_yellow"
            android:fontFamily="@font/andika"
            android:gravity="center"
            android:text="Login"
            android:textAllCaps="false"
            android:textColor="@color/g_white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edittestlayout2"
            app:spinning_bar_color="@color/g_white"
            app:spinning_bar_padding="6dp"
            app:spinning_bar_width="4dp" />

        <TextView
            android:id="@+id/forgot_passwrd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/andika"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_user" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgot_passwrd">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/andika"
                android:text="@string/don_t_have_account"
                android:textColor="@color/g_black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/notaccsignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/andika"
                android:text="@string/sign_up"
                android:textColor="@color/g_red"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinehorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.24" />


</androidx.constraintlayout.widget.ConstraintLayout>