<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.fragments.setting.BillingFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintStart_toEndOf="@id/start_guideline"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/cancel_img"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginTop="6dp"
                android:contentDescription="@string/cancel_img"
                android:src="@drawable/cancel_ic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/andika_new_basic"
                android:text="@string/billing"
                android:textColor="@color/g_black"
                android:textSize="26sp"
                android:textStyle="bold" />

        </LinearLayout>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.03" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/andika_new_basic"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.97" />


        <TextView
            android:id="@+id/pymt_mth_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/andika_new_basic"
            android:text="@string/payment_methods"
            android:textColor="@color/g_black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />


        <TextView
            android:id="@+id/pymt_mth_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/payment_options"
            android:textColor="@color/g_lightblack"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintStart_toEndOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/pymt_mth_head" />


        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:background="@color/g_blue_light"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintStart_toEndOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/pymt_mth_detail" />

        <LinearLayout
            android:id="@+id/linear_lay_add_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintStart_toEndOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/view">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/shipping"
                    android:src="@drawable/shiping_ic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/shipping1"
                    android:textColor="@color/g_black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <ImageView
                android:id="@+id/add_address"
                android:layout_width="35dp"
                android:layout_height="40dp"
                android:layout_marginStart="4dp"
                android:contentDescription="@string/shipping"
                android:padding="2dp"
                android:src="@drawable/add_addres_ic" />


        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/addres_RV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/linear_lay_add_address" />

        <View
            android:id="@+id/view_btm_of_rv_add"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/g_blue_light"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintStart_toEndOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/addres_RV" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/products_RV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/view_btm_of_rv_add" />


        <View
            android:id="@+id/view_btm_of_rv_products"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:background="@color/g_blue_light"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintStart_toEndOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/products_RV" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/total_price_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/totalprice_box_back"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintStart_toEndOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/view_btm_of_rv_products">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/andika_new_basic"
                android:text="@string/total"
                android:textAllCaps="false"
                android:textColor="@color/g_black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/andika_new_basic"
                android:textAllCaps="false"
                android:textColor="@color/g_black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Rs 115000" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/place_order_bttn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/g_blue"
            android:fontFamily="@font/andika_new_basic"
            android:text="@string/place_order"
            android:textAllCaps="false"
            android:textColor="@color/g_white"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintStart_toEndOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/total_price_layout"
            app:spinning_bar_color="@color/g_white" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>